--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">COMPANY NAME</div>
-            <nav>
+            <div class="logo">SNAPSHOP</div>
+            <nav class="nav">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -21,14 +21,14 @@
         </div>
     </header>
     <main>
-        <div class="container">
+        <div class="container1">
             <div class="content">
-                <h1>ONLINE SHOPPING</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <h1>Shopping Right at Your Fingertips</h1>
+                <p>
+                    Looking for the best deals and top-quality products? Shop now and enjoy fast 
+                    delivery, secure payments, and exclusive offers all in one place!
+                </p>
                 <button id="cta-button">Get Started</button>
-            </div>
-            <div class="illustration">
-                <img src="your-image.png" alt="Shopping Illustration">
             </div>
         </div>
     </main>
