--- a/index.html
+++ b/index.html
@@ -1,37 +1,96 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Shopping</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <div class="container">
-            <div class="logo">SNAPSHOP</div>
-            <nav class="nav">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <main>
-        <div class="container1">
-            <div class="content">
-                <h1>Shopping Right at Your Fingertips</h1>
-                <p>
-                    Looking for the best deals and top-quality products? Shop now and enjoy fast 
-                    delivery, secure payments, and exclusive offers all in one place!
-                </p>
-                <button id="cta-button">Get Started</button>
-            </div>
-        </div>
-    </main>
-    <script src="script.js"></script>
-</body>
-</html>
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f0f0f0;
+}
+
+header {
+    background-color: #ff6b81;
+    padding: 15px 0;
+}
+.container1 {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.container {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    color: #4b0082;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 38px;
+    font-weight: bold;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0; 
+    margin-right: 20%;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin-left: 50px;
+}
+
+nav ul li a {
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+
+}
+
+main {
+    background-image: url('images/3.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 20px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.content {
+    width: 50%;
+}
+
+.content h1 {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 60px;
+    color: #4b0082;
+}
+
+.content p {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 18px;
+    color: #fff2f7;
+    line-height: 1.5;
+}
+
+button {
+    background-color: #ff6b81;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: #d8435e;
+}
