--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
-            <button class="login-button">Login</button>
+            <button class="login-button" onclick="window.location.href='products.html'">Login</button>
         </div>
     </header>
 
