--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
-            <button class="login-button" onclick="window.location.href='products.html'">Login</button>
+            <button class="login-button">Login</button>
         </div>
     </header>
 
@@ -30,7 +30,7 @@
                     Looking for the best deals and top-quality products? Shop now and enjoy fast 
                     delivery, secure payments, and exclusive offers all in one place!
                 </p>
-                <button id="cta-button">Get Started</button>
+                <button id="cta-button" onclick="window.location.href='products.html'">Get Started</button>
             </div> 
         </div>
 
