--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     Looking for the best deals and top-quality products? Shop now and enjoy fast 
                     delivery, secure payments, and exclusive offers all in one place!
                 </p>
-                <button id="cta-button" onclick="window.location.href='product.html'">Get Started</button>
+                <button id="cta-button" >Get Started</button>
             </div> 
         </div>
 
